--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "homepage": "https://github.com/LawEKS/crypto-widget#readme",
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0",
     "nock": "^9.2.3",
     "nodemon": "^1.17.2",
     "nyc": "^11.6.0",
